--- a/src/main/webapp/sequence/activity/spottingActivity3.xhtml
+++ b/src/main/webapp/sequence/activity/spottingActivity3.xhtml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns="http://www.w3.org/1999/xhtml"
                 template="./../../WEB-INF/templates/default.xhtml"
@@ -9,19 +10,20 @@
 
     <f:metadata>
         <f:viewParam name="idSequence" value="#{spottingActivityBean3.idSequence}"/>
-        <f:event type="preRenderView" listener="#{spottingActivityBean3.preRenderView()}" />
+        <f:event type="preRenderView" listener="#{spottingActivityBean3.preRenderView()}"/>
     </f:metadata>
 
     <ui:define name="title">
         Activité de Repérage
     </ui:define>
 
-    <ui:define name="head">      
+    <ui:define name="head">
         <link href="#{request.contextPath}/resources/css/spottingActivity.css" rel="stylesheet" type="text/css"/>
     </ui:define>
 
     <ui:define name="content">
         <h2>Activité de Repérage</h2>
+
         <p class="text-justify">
             En suivant la même démarche, organisez maintenant les
             éléments en deux groupes selon leur caractéristiques communes.
@@ -49,10 +51,12 @@
                             <h:outputText value=" #{elem.value} "/>
                         </ui:fragment>
                         <ui:fragment rendered="#{elem.referent}">
-                            <h:outputText value=" #{spottingActivityBean2.getElementsFromReferent(elem)} " style="color:#{spottingActivityBean3.getRefColor(elem.idn)}"/>
+                            <h:outputText value=" #{spottingActivityBean2.getElementsFromReferent(elem)} "
+                                          style="color:#{spottingActivityBean3.getRefColor(elem.idn)}"/>
                         </ui:fragment>
                         <ui:fragment rendered="#{elem.coreferent}">
-                            <h:outputText value=" #{spottingActivityBean2.getElementsFromReferent(elem)} " style="color:#{spottingActivityBean3.getCoRefColor(elem.chaine, elem.idn)}" />
+                            <h:outputText value=" #{spottingActivityBean2.getElementsFromReferent(elem)} "
+                                          style="color:#{spottingActivityBean3.getCoRefColor(elem.chaine, elem.idn)}"/>
                         </ui:fragment>
                     </ui:repeat>
                 </div>
@@ -65,10 +69,12 @@
                                         <h:outputText value=" #{elem.value} "/>
                                     </ui:fragment>
                                     <ui:fragment rendered="#{elem.referent}">
-                                        <h:outputText value=" #{spottingActivityBean2.getElementsFromReferent(elem)} " style="color:#{spottingActivityBean3.getRefColor(elem.idn)}"/>
+                                        <h:outputText value=" #{spottingActivityBean2.getElementsFromReferent(elem)} "
+                                                      style="color:#{spottingActivityBean3.getRefColor(elem.idn)}"/>
                                     </ui:fragment>
                                     <ui:fragment rendered="#{elem.coreferent}">
-                                        <h:outputText value=" #{spottingActivityBean2.getElementsFromReferent(elem)} " style="color:#{spottingActivityBean3.getCoRefColor(elem.chaine, elem.idn)}" />
+                                        <h:outputText value=" #{spottingActivityBean2.getElementsFromReferent(elem)} "
+                                                      style="color:#{spottingActivityBean3.getCoRefColor(elem.chaine, elem.idn)}"/>
                                     </ui:fragment>
                                 </ui:repeat>
                             </div>
@@ -80,102 +86,124 @@
                                         <h:outputText value=" #{elem.value} "/>
                                     </ui:fragment>
                                     <ui:fragment rendered="#{elem.referent}">
-                                        <h:outputText value=" #{spottingActivityBean2.getElementsFromReferent(elem)} " style="color:#{spottingActivityBean3.getRefColor(elem.idn)}"/>
+                                        <h:outputText value=" #{spottingActivityBean2.getElementsFromReferent(elem)} "
+                                                      style="color:#{spottingActivityBean3.getRefColor(elem.idn)}"/>
                                     </ui:fragment>
                                     <ui:fragment rendered="#{elem.coreferent}">
-                                        <h:outputText value=" #{spottingActivityBean2.getElementsFromReferent(elem)} " style="color:#{spottingActivityBean3.getCoRefColor(elem.chaine, elem.idn)}" />
+                                        <h:outputText value=" #{spottingActivityBean2.getElementsFromReferent(elem)} "
+                                                      style="color:#{spottingActivityBean3.getCoRefColor(elem.chaine, elem.idn)}"/>
                                     </ui:fragment>
                                 </ui:repeat>
-                            </div>                            
+                            </div>
                         </ui:fragment>
                     </ui:repeat>
                 </div>
             </p:panel>
             <br/>
+
             <div class="row">
-                <div id="message" style="display: none;"></div>
+                <div class="offset3 span3">
+                    <div id="message" style="display: none;"></div>
+                </div>
+                <div class="span3">
+                    <div id="next" style="display: none;margin: 10px 0px;">
+                        <h:link id="nextButton1" outcome="supports" value="Continuer" styleClass="btn btn-danger"
+                                rendered="#{spottingActivityBean3.supports}">
+                            <f:param name="idSequence" value="#{spottingActivityBean3.idSequence}"/>
+                        </h:link>
+                        <h:link id="nextButton2" outcome="systematizationActivity" value="Continuer"
+                                styleClass="btn btn-danger" rendered="#{!spottingActivityBean3.supports}">
+                            <f:param name="idSequence" value="#{spottingActivityBean3.idSequence}"/>
+                        </h:link>
+                    </div>
+                </div>
+                <div class="row">
+                    <div id="message" style="display: none;"></div>
+                </div>
             </div>
             <div class="row" id="columns">
                 <div class="span1">
-                    <div class="column0" style="display: none; height: #{20 * (spottingActivityBean3.coreferent1.size() * 2) - 25}px;width: 100%;">                        
+                    <div class="column0"
+                         style="display: none; height: #{20 * (spottingActivityBean3.coreferent1.size() * 2) - 25}px;width: 100%;">
                         <div class="cbody">
-                            <div class="gn" style="height: #{(20 * spottingActivityBean3.coreferent1.size() - 30)/2}px;width: 100%;padding-top: #{(20 * spottingActivityBean3.coreferent1.size() - 30)/2}px">
+                            <div class="gn"
+                                 style="height: #{(20 * spottingActivityBean3.coreferent1.size() - 30)/2}px;width: 100%;padding-top: #{(20 * spottingActivityBean3.coreferent1.size() - 30)/2}px">
                                 GN
                             </div>
-                            <div class="pron" style="height: #{(20 * spottingActivityBean3.coreferent1.size() - 30)/2}px;width: 100%;padding-top: #{(20 * spottingActivityBean3.coreferent1.size() - 30)/2}px">
+                            <div class="pron"
+                                 style="height: #{(20 * spottingActivityBean3.coreferent1.size() - 30)/2}px;width: 100%;padding-top: #{(20 * spottingActivityBean3.coreferent1.size() - 30)/2}px">
                                 Pron
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="span3">
-                    <div class="column1" style="height: #{20 * (spottingActivityBean3.coreferent1.size() * 2)}px;width: 100%;">
+                    <div class="column1"
+                         style="height: #{20 * (spottingActivityBean3.coreferent1.size() * 2)}px;width: 100%;">
                         <header>
                             #{spottingActivityBean3.getElementsFromReferent(spottingActivityBean3.referent1)}
                         </header>
                         <div class="cbody">
-                            <div class="gn" style="height: #{20 * spottingActivityBean3.coreferent1.size() - 30}px;width: 100%;">
+                            <div class="gn"
+                                 style="height: #{20 * spottingActivityBean3.coreferent1.size() - 30}px;width: 100%;">
                                 <ui:repeat value="#{spottingActivityBean3.coreferent1}" var="elem">
-                                    <div class="coreferent" style="color:#{spottingActivityBean2.getCoRefColor(elem.chaine, elem.idn)}" 
+                                    <div class="coreferent"
+                                         style="color:#{spottingActivityBean2.getCoRefColor(elem.chaine, elem.idn)}"
                                          idn="#{elem.idn}" type="#{elem.type}" subtype="#{elem.sousType}"
                                          draggable="true">#{spottingActivityBean2.getElementsFromReferent(elem)}</div>
                                 </ui:repeat>
                             </div>
-                            <div class="pron" style="height: #{20 * spottingActivityBean3.coreferent1.size() - 30}px;width: 100%;"></div>
+                            <div class="pron"
+                                 style="height: #{20 * spottingActivityBean3.coreferent1.size() - 30}px;width: 100%;"></div>
                         </div>
                     </div>
                 </div>
                 <div class="span3">
-                    <div class="column2" style="height: #{20 * (spottingActivityBean3.coreferent1.size() * 2)}px;width: 100%;">
+                    <div class="column2"
+                         style="height: #{20 * (spottingActivityBean3.coreferent1.size() * 2)}px;width: 100%;">
                         <header>
                             #{spottingActivityBean3.getElementsFromReferent(spottingActivityBean3.referent2)}
                         </header>
-                        <div class="cbody" >
-                            <div class="gn" style="height: #{20 * spottingActivityBean3.coreferent1.size() - 30}px;width: 100%;">
+                        <div class="cbody">
+                            <div class="gn"
+                                 style="height: #{20 * spottingActivityBean3.coreferent1.size() - 30}px;width: 100%;">
                                 <ui:repeat value="#{spottingActivityBean3.coreferent2}" var="elem">
-                                    <div class="coreferent" style="color:#{spottingActivityBean2.getCoRefColor(elem.chaine, elem.idn)}" 
+                                    <div class="coreferent"
+                                         style="color:#{spottingActivityBean2.getCoRefColor(elem.chaine, elem.idn)}"
                                          idn="#{elem.idn}" type="#{elem.type}" subtype="#{elem.sousType}"
                                          draggable="true">#{spottingActivityBean2.getElementsFromReferent(elem)}</div>
                                 </ui:repeat>
                             </div>
-                            <div class="pron" style="height: #{20 * spottingActivityBean3.coreferent1.size() - 30}px;width: 100%;"></div>
+                            <div class="pron"
+                                 style="height: #{20 * spottingActivityBean3.coreferent1.size() - 30}px;width: 100%;"></div>
                         </div>
                     </div>
                 </div>
                 <div class="span3">
-                    <div class="column3" style="height: #{20 * (spottingActivityBean3.coreferent1.size() * 2)}px;width: 100%;">
+                    <div class="column3"
+                         style="height: #{20 * (spottingActivityBean3.coreferent1.size() * 2)}px;width: 100%;">
                         <header>
                             #{spottingActivityBean3.getElementsFromReferent(spottingActivityBean3.referent3)}
                         </header>
                         <div class="cbody">
-                            <div class="gn" style="height: #{20 * spottingActivityBean3.coreferent1.size() - 30}px;width: 100%;">
+                            <div class="gn"
+                                 style="height: #{20 * spottingActivityBean3.coreferent1.size() - 30}px;width: 100%;">
                                 <ui:repeat value="#{spottingActivityBean3.coreferent3}" var="elem">
-                                    <div class="coreferent" style="color:#{spottingActivityBean2.getCoRefColor(elem.chaine, elem.idn)}" 
+                                    <div class="coreferent"
+                                         style="color:#{spottingActivityBean2.getCoRefColor(elem.chaine, elem.idn)}"
                                          idn="#{elem.idn}" type="#{elem.type}" subtype="#{elem.sousType}"
                                          draggable="true">#{spottingActivityBean2.getElementsFromReferent(elem)}</div>
                                 </ui:repeat>
                             </div>
-                            <div class="pron" style="height: #{20 * spottingActivityBean3.coreferent1.size() - 30}px;width: 100%;"></div>
+                            <div class="pron"
+                                 style="height: #{20 * spottingActivityBean3.coreferent1.size() - 30}px;width: 100%;"></div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="offset3 span3">
-                <div id="message" style="display: none;"></div>
-            </div>
-            <div class="span3">
-                <div id="next" style="display: none;margin: 10px 0px;">
-                    <h:link id="nextButton1" outcome="supports" value="Continuer" styleClass="btn btn-danger" rendered="#{spottingActivityBean3.supports}">
-                        <f:param name="idSequence" value="#{spottingActivityBean3.idSequence}"/>
-                    </h:link>
-                    <h:link id="nextButton2" outcome="systematizationActivity" value="Continuer" styleClass="btn btn-danger" rendered="#{!spottingActivityBean3.supports}">
-                        <f:param name="idSequence" value="#{spottingActivityBean3.idSequence}"/>
-                    </h:link>
-                </div>
-            </div>
-        </h:form> 
+        </h:form>
         <script>
-            var r1GN = #{spottingActivityBean3.r1GN};            
+            var r1GN = #{spottingActivityBean3.r1GN};
             var r1Pron = #{spottingActivityBean3.r1Pron};
             var r2GN = #{spottingActivityBean3.r2GN};
             var r2Pron = #{spottingActivityBean3.r2Pron};
