Application Activity "Complete" !!
- « Complete » because needs to be persisted in BD

--- a/src/main/webapp/sequence/activity/systematizationActivity3.xhtml
+++ b/src/main/webapp/sequence/activity/systematizationActivity3.xhtml
@@ -108,7 +108,7 @@
                 </div>
                 <div class="span3">
                     <div id="next" style="display: none;margin: 10px 0px;">
-                        <h:link id="nextButton" outcome="supports" value="Continuer" styleClass="btn btn-danger">
+                        <h:link id="nextButton" outcome="applicationActivity.xhtml" value="Continuer" styleClass="btn btn-danger">
                             <f:param name="idSequence" value="#{systematizationActivityBean3.idSequence}"/>
                         </h:link>
                     </div>
