fixed syntax error and appended scripts to all activities

--- a/src/main/webapp/sequence/activity/spottingActivity2.xhtml
+++ b/src/main/webapp/sequence/activity/spottingActivity2.xhtml
@@ -177,6 +177,8 @@
             var rightAnswers = #{spottingActivityBean2.rightAnswers};
         </script>
         <script type="text/javascript" src="#{request.contextPath}/resources/js/spottingActivity2.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/lodash/lodash.min.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/js/typographyFix.js"></script>
     </ui:define>
 
 </ui:composition>
