--- a/src/main/webapp/sequence/activity/spottingActivity3.xhtml
+++ b/src/main/webapp/sequence/activity/spottingActivity3.xhtml
@@ -211,6 +211,8 @@
             var r3Pron = #{spottingActivityBean3.r3Pron};
         </script>
         <script type="text/javascript" src="#{request.contextPath}/resources/js/spottingActivity3.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/lodash/lodash.min.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/js/typographyFix.js"></script>
     </ui:define>
 
 </ui:composition>
