fixed typography rules for colon and semi-colon, added scripts to systemization activities too

--- a/src/main/webapp/sequence/activity/systematizationActivity2.xhtml
+++ b/src/main/webapp/sequence/activity/systematizationActivity2.xhtml
@@ -150,6 +150,8 @@
             </div>
         </h:form> 
         <script type="text/javascript" src="#{request.contextPath}/resources/js/systematizationActivity2.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/lodash/lodash.min.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/js/typographyFix.js"></script>
     </ui:define>
 
 </ui:composition>
