--- a/src/main/webapp/sequence/activity/systematizationActivity.xhtml
+++ b/src/main/webapp/sequence/activity/systematizationActivity.xhtml
@@ -187,6 +187,8 @@
             var rightAnswers = #{systematizationActivityBean.rightAnswers};
         </script>
         <script type="text/javascript" src="#{request.contextPath}/resources/js/systematizationActivity.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/lodash/lodash.min.js"></script>
+        <script type="text/javascript" src="#{request.contextPath}/resources/js/typographyFix.js"></script>
     </ui:define>
 
 </ui:composition>
